Make sure the image is sized correctly on mobile

--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -167,9 +167,8 @@
 
 		img {
 		  object-fit: cover;
-		  width: auto;
-			max-width: 100%;
-		  height: 100%;
+		  width: 100%;
+		  height: auto;
 		  padding: 0;
 		}
 
@@ -246,8 +245,16 @@
 		}
 
 		.cl-panel-super-image {
+
 			height: 100%;
 			max-width: 50%;
+
+      img {
+        width: auto;
+        max-width: 100%;
+        height: 100%;
+      }
+
 		}
 
 		.cl-panel-super-text {
